# ros2_ws

./: README.md
depth-images/: depth_algorithm_v1.py  depth_algorithm_v2.py  depth_algorithm_v3.py  html.html  ros_outputs.sh
install/: local_setup.sh  setup.sh
install/articubot_one/share/articubot_one/: package.sh
install/kinect_depth/lib/kinect_depth/: depth_publisher
install/kinect_depth/share/kinect_depth/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kinect_ros2/lib/kinect_ros2/: kinect_ros2_node
install/kinect_ros2/share/kinect_ros2/: package.sh
install/libfreenect/lib/: libfreenect_sync.so.0.7.5
install/libfreenect/lib/pkgconfig/: libfreenect.pc
install/libfreenect/share/libfreenect/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/kinect_depth/: package.xml  setup.cfg  setup.py
src/kinect_depth/kinect_depth/: depth_publisher.py
src/kinect_depth/launch/: launch_depth_publisher.launch.py
src/kinect_ros2/: CMakeLists.txt
src/kinect_ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/kinect_ros2/launch/: kinect_slam.launch.py  pointcloud.launch.py  slam.launch.py  slamv3.launch.py
src/my_robot/: my_robot.urdf  package.xml  setup.py
src/my_robot/launch/: display.launch.py
src/my_robot/rviz/: my_robot_config.rviz
src/talker_listener/: package.xml  setup.py
src/talker_listener/install/: local_setup.sh  setup.sh
src/talker_listener/log/: latest_build
src/talker_listener/talker_listener/: listener.py  talker.py
(+19 files in other folders)
